pushing class presentation on simple roll-your-own api key auth - pre interceptor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/custom_key
-spring.datasource.username=ryan
-spring.datasource.password=CodingNomadsFoEva!
+#spring.datasource.url=jdbc:mysql://localhost:3306/custom_key
+#spring.datasource.username=ryan
+#spring.datasource.password=CodingNomadsFoEva!
+
+spring.datasource.url=jdbc:mysql://aws-custom-key-db.cbk1vlhbud9c.us-west-2.rds.amazonaws.com:3306/custom_key
+spring.datasource.username=user
+spring.datasource.password=password
 
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
